# kedro-sample

./: README.md  model.sav  pyproject.toml
conf/base/: parameters.yml
docs/source/: conf.py  index.rst
src/kedro_sample/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/kedro_sample/pipelines/: sample_pipeline.py
src/tests/: test_run.py
