[tool.poetry]
name = "kedro-sample"
version = "0.1.0"
description = ""
authors = ["ya-mori <ppap.yohei.moriya@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.6"
kedro = "0.17.3"
black = "v19.10b0"
flake8 = ">=3.7.9,"
ipython = "7.10"
isort = ">=4.3.21,"
jupyter = "~=1.0"
jupyter-client = ">=5.1,"
jupyterlab = "0.31.1"
nbstripout = "0.3.3"
pytest-cov = "~=2.5"
pytest-mock = ">=1.7.1,"
pytest = "~=6.1.2"
wheel = "0.32.2"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]

[tool.kedro]
package_name = "kedro_sample"
project_name = "kedro-sample"
project_version = "0.17.3"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/kedro_sample -ra"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
